--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,34 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="841.0" prefWidth="744.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <ScrollPane hbarPolicy="NEVER" prefHeight="407.0" prefWidth="744.0" vbarPolicy="NEVER">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="366.0" prefWidth="715.0" />
+            </content>
+        </ScrollPane>
+        <RadioButton layoutX="40.0" layoutY="461.0" mnemonicParsing="false" text="Von Neumann" />
+        <TextField layoutX="41.0" layoutY="425.0" prefHeight="25.0" prefWidth="129.0" text="Neighboorhood" />
+        <RadioButton layoutX="38.0" layoutY="529.0" mnemonicParsing="false" text="Hexagonal Left" />
+        <RadioButton layoutX="38.0" layoutY="573.0" mnemonicParsing="false" text="Hexagonal Right" />
+        <RadioButton layoutX="45.0" layoutY="624.0" mnemonicParsing="false" text="Hexagonal Random" />
+        <RadioButton layoutX="44.0" layoutY="672.0" mnemonicParsing="false" text="Pentagonal Left" />
+        <RadioButton layoutX="44.0" layoutY="716.0" mnemonicParsing="false" text="Pentagonal Right" />
+        <RadioButton layoutX="49.0" layoutY="763.0" mnemonicParsing="false" text="Pentagonal Random" />
+        <RadioButton layoutX="38.0" layoutY="496.0" mnemonicParsing="false" text="Moore'a" />
+        <Button layoutX="553.0" layoutY="445.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="169.0" text="Create Basic dimension" />
+        <Button layoutX="551.0" layoutY="534.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="169.0" text="Algorithm" />
+        <TextField layoutX="563.0" layoutY="599.0" promptText="Count of steps" />
+        <TextField layoutX="274.0" layoutY="425.0" text="Boundary Conditions" />
+        <RadioButton layoutX="274.0" layoutY="461.0" mnemonicParsing="false" text="Periodic " />
+        <RadioButton layoutX="274.0" layoutY="496.0" mnemonicParsing="false" text="Non Periodic" />
+        <Button layoutX="493.0" layoutY="742.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="215.0" text="Save image" />
+    </children>
+</AnchorPane>
